# metafolder

./: .gitignore  .metafolder  Cargo.toml  README.md  metafolder.desktop
src/: cell.rs  cell_editor.rs  files.rs  find.rs  folder.rs  gtk_wrappers.rs  main.rs  menus.rs  metafolder.rs  preset.rs  settings.rs  text.rs  zoom.rs
src/app_with_datastore/: imp.rs  mod.rs
src/appwindow_with_datastore/: imp.rs  mod.rs
