[package]
name = "metafolder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio-sys = "0.19.0"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_10"] }
home = "0.5.9"
html-escape = "0.2.13"
ignore = "0.4.22"
serde = { version = "1.0.197", features = ["derive"] }
urlencoding = "2.1.3"
