[package]
name = "metafolder"
version = "0.3.0"
edition = "2021"
authors = ["Piero de Salvia"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio-sys = "0.19.0"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_10", "v4_12", "v4_14"] }
home = "0.5.9"
html-escape = "0.2.13"
ignore = "0.4.22"
open = "5.1.2"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
urlencoding = "2.1.3"
xdg-utils = "0.4.0"
rand = "0.9.0-alpha.1"
